<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    card_view:cardCornerRadius="4dp">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="10dp">
        
        <ImageView
            android:id="@+id/city_photo"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_picture"/>

        <TextView
            android:id="@+id/city_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/city_photo"
            android:layout_marginBottom="10dp"
            android:text="@string/city"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/city_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/city_name"
            android:layout_toEndOf="@id/city_photo"
            android:layout_marginBottom="10dp"
            android:text="@string/detail"
            android:textSize="16sp"
            android:maxLines="3"
            android:ellipsize="end"/>

        <Button
            android:id="@+id/detail_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/city_photo"
            android:layout_alignParentBottom="true"
            android:text = "@string/details"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>